# factoryML

./: .gitattributes  .gitignore  .gitmodules  README.md  docker-compose.yml  ml.ipynb  requirements.txt  run_all.sh  server.py  utils.py
backend/: .gitignore  Dockerfile  pyproject.toml  run_server.ps1  run_server.sh
backend/app/: main.py
backend/app/api/v1/: schemas.py
backend/app/api/v1/endpoints/: data.py  timeseries.py
backend/app/api/v1/schemas/: timeseries_schemas.py
backend/app/core/: config.py
backend/app/crud/: crud_sensor_data.py  crud_timeseries.py
backend/app/db/: models.py  session.py
backend/app/services/: digital_twin_client.py  iot_service.py  ml_service.py  prediction_model_client.py
data/: dataset_test.csv
diagrams/: 01_arch.drawio
digital-twin/: Dockerfile  pyproject.toml  run_server.ps1  run_server.sh
docs/: .latexmkrc  biblio.bib  main.tex
ml/: .gitignore  README.md  generate_test.py  ml.ipynb  pyproject.toml  requirements.txt  train_models.py
ml-inference/: Dockerfile  main.py  pyproject.toml  run_server.ps1  run_server.sh
ml-inference/app/: main.py
ml/data/: dataset.csv  dataset_test.csv
model/: ActivePower.keras  ActivePower_scaler.joblib  AirTemperatureMantelA.keras  AirTemperatureMantelA_scaler.joblib  AirTemperatureMantelB.keras  AirTemperatureMantelB_scaler.joblib  AirTemperatureMantelC.keras  AirTemperatureMantelC_scaler.joblib  CurrentHolderPositionA.keras  CurrentHolderPositionA_scaler.joblib  CurrentHolderPositionB.keras  CurrentHolderPositionB_scaler.joblib  CurrentHolderPositionC.keras  HighVoltageA.keras  (+60 more)
(+39 files in other folders)
