[project]
name = "ml-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "joblib>=1.5.0",
    "keras-core>=0.1.7",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "tensorflow[and-cuda]>=2.19.0",
    "uvicorn[standard]>=0.34.2",
]
