[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keras>=3.9.2",
    "keras-core>=0.1.7",
    "keras-cv>=0.9.0",
    "keras-hub>=0.20.0",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pylint>=3.3.7",
    "scikit-learn>=1.6.1",
    "tensorflow[and-cuda]>=2.19.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
